# ukbfetch_workflow

./: README.md  pyproject.toml  requirements.txt
inputs/: in1.txt
src/ukb/: ukb.py
src/ukbfetch/: api.py  cli.py
workflow/: Snakefile
