[build-system]
requires = ["setuptools>=64", ]
build-backend = "setuptools.build_meta"

[project]
name = "ukbfetch"
description = "Python emulator of ukbfetch"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Alexander PLETZER", email = "alexander.pletzer@nesi.org.nz " }
]
dependencies = [
    "snakemake",
    "defopt",
]
version = "0.0.1"

[project.optional-dependencies]
test = ["pytest"]
dev = [
    "ukbfetch[test]",
    "ruff",
    "pdbpp",
    "pyinstrument"
]

[project.scripts]
ukb = "ukbfetch.cli:main"

